// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DappLogoWithTxStatus > renders without error > with dapp name 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <img
      data-testid="dapp-image"
      src="https://example.com/dapp.png"
    />
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`DappLogoWithWCBadge > renders without error 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _alignItems-center _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _justifyContent-center _height-44px _width-44px"
    >
      <div
        class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _left-2px _top-0px"
      >
        <img
          data-testid="dapp-image"
          src="https://example.com/dapp.png"
        />
      </div>
      <div
        class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _bottom--2px _position-absolute _right--2px"
      >
        <div
          class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _overflowX-hidden _overflowY-hidden _zIndex-10"
          data-testid="network-logo"
          style="width: 19.2px; height: 19.2px; border-radius: 5.76px; border-width: 1.6px; border-color: #131313; border-style: solid;"
        >
          <div
            class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
            style="width: 16px; height: 16px;"
          >
            <div
              class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-ehq7j7"
              style="background-image: url(mock-asset-ARBITRUM_LOGO.png);"
            />
            <img
              alt=""
              class="css-accessibilityImage-9pa8cd"
              draggable="false"
              src="mock-asset-ARBITRUM_LOGO.png"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;

exports[`LogoWithTxStatus > renders without error 1`] = `
<DocumentFragment>
  <span
    class=""
    style="display: contents;"
  >
    <div
      class="_display-flex _alignItems-center _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _justifyContent-center _height-40px _width-40px"
    >
      <div
        class="_display-flex _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _alignItems-center _height-40px _justifyContent-center _pointerEvents-auto _width-40px _position-relative"
        data-testid="token-logo"
      >
        <div
          class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _opacity-0 _height-9637 _width-9637 _zIndex-0 _backgroundColor-FFFFFF35 _position-absolute _top-237 _left-237 _borderTopLeftRadius-20px _borderTopRightRadius-20px _borderBottomRightRadius-20px _borderBottomLeftRadius-20px"
        />
        <img
          data-testid="token-image"
          src="https://token-icons.s3.amazonaws.com/eth.png"
        />
      </div>
      <div
        class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _bottom--4px _position-absolute _right--4px _zIndex-10"
      >
        <div
          data-testid="status-icon"
          fill="rgba(255, 255, 255, 0.65)"
          stroke-width="8"
          style="width: 20px; height: 20px; color: rgb(31, 31, 31);"
          viewbox="0 0 16 16"
        >
          <div
            d="M7.99968 14.6668C11.6816 14.6668 14.6663 11.6821 14.6663 8.00016C14.6663 4.31826 11.6816 1.3335 7.99968 1.3335C4.31778 1.3335 1.33301 4.31826 1.33301 8.00016C1.33301 11.6821 4.31778 14.6668 7.99968 14.6668Z"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <div
            d="M10.6663 8.00032L7.99965 5.33365L5.33299 8.00032"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <div
            d="M7.99933 10.6668V5.33349"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
        </div>
      </div>
    </div>
    <div
      style="display: contents;"
    />
  </span>
</DocumentFragment>
`;
